@@ -1,0 +1,1 @@
+i386	1.6	NetBSD	GENERIC	i386-unknown-netbsdelf1.6
